Fixed jump point

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ ol {
 
 ol a {
 	background-color: #b2a215;
-	padding: 0.3rem 0.5rem;
+	padding: 0.3em 0.5em;
 	color: white;
 	text-decoration: none;
 	border-radius: 4px;
